# withdrawal-processor

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: 001_schema.sql
scripts/: demo.py
sluice/: __init__.py  api.py  canonical.py  config.py  crashpoints.py  model.py  money.py  pipeline.py  service.py  states.py  worker.py
sluice/store/: __init__.py  memory.py  postgres.py
sluice/tron/: __init__.py  address.py  mocknet.py  signer.py  types.py
tests/: __init__.py  helpers.py  test_chaos.py  test_crash_recovery.py  test_fencing.py  test_intake.py  test_lifecycle.py  test_units.py
tests/pg/: test_pg_store.py
