[project]
name = "sluice"
version = "0.3.1"
description = "Idempotent TRC-20 withdrawal processor: exactly-once money movement under crashes and races"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "flask>=3.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

# The fast test tier (tests/, everything except tests/pg) intentionally has
# ZERO third-party test dependencies - `python -m unittest` on a bare
# interpreter runs the whole failure matrix. pytest is a nicety, not a need.

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sluice*"]
